src/objects/ProjectGlobalHeirarchy__c.object
<CustomObject>
    <fields>
        <fullName>ChildOrgID__c</fullName>
        <formula>ChildOrgName__r.OrgID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildOrgName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Org Name</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Project Global Heirarchies (Child Org Name)</relationshipLabel>
        <relationshipName>ProjectGlobalHeirarchiesChildOrg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HierarchyName__c</fullName>
        <label>Hierarchy Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentOrgID__c</fullName>
        <formula>ParentOrgName__r.OrgID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOrgName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Org Name</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Project Global Heirarchies</relationshipLabel>
        <relationshipName>ProjectGlobalHeirarchiesParentOrg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Global Heirarchy</label>
    <nameField>
        <displayFormat>GH-{000000000}</displayFormat>
        <label>Project Global Heirarchy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Global Heirarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>